@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6202 2004/06/11 23:13:37 jdarrow Exp $
+$NetBSD: CHANGES,v 1.6203 2004/06/12 05:18:23 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2934,3 +2934,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated peace to 0.0.20040611 [kent 2004-06-11]
 	Updated subversion to 1.0.5 [epg 2004-06-11]
 	Updated milter-regex to 1.5 [jdarrow 2004-06-11]
+	Updated nbsed to 20040612 [minskim 2004-06-12]
